--- a/_config.yml
+++ b/_config.yml
@@ -36,5 +36,5 @@ colors:
   maroon: 	 '#a30000'
   darkyellow: '#ffab05'
   cream: 	 '#faebd7'
-  red:  	 '#fed78a'
-  yellow:    '#aa222e'
+  yellow:  	 '#fed78a'
+  red:    '#aa222e'
